--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Emmanuel's Tech Goals</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1 data-testid="slackDisplayName">Nuel_MD</h1>
+        <img src="Nuel_MD.jpg" alt="Slack Profile Picture" data-testid="slackProfilePicture">
+    </header>
+    <main>
+        <section>
+            <h2>My Tech Goals for the Next 2 Years</h2>
+            <ul>
+                <li>Master Frontend Development:
+                    <ul>
+                        <li>Gain proficiency in HTML, CSS, and JavaScript.</li>
+                        <li>Learn and build projects with popular frameworks like React, Angular, and Vue.js.</li>
+                        <li>Enhance knowledge of responsive design and cross-browser compatibility.</li>
+                    </ul>
+                </li>
+                <li>Build a Portfolio of Projects:
+                    <ul>
+                        <li>Develop and deploy at least 5 significant frontend projects.</li>
+                        <li>Participate in open-source projects and contribute to the community.</li>
+                        <li>Create a professional online portfolio showcasing my work.</li>
+                    </ul>
+                </li>
+                <li>Expand Technical Skills:
+                    <ul>
+                        <li>Learn backend technologies like Node.js, Express, and databases (MongoDB, PostgreSQL).</li>
+                        <li>Explore DevOps practices and tools such as Docker, Kubernetes, and CI/CD pipelines.</li>
+                        <li>Gain a basic understanding of cloud platforms like AWS, Azure, and Google Cloud.</li>
+                    </ul>
+                </li>
+                <li>Achieve Certifications:
+                    <ul>
+                        <li>Complete certifications in frontend and full-stack development from reputable platforms (e.g., freeCodeCamp, Coursera, Udemy).</li>
+                        <li>Attend workshops and bootcamps to stay updated with industry trends.</li>
+                    </ul>
+                </li>
+                <li>Networking and Professional Growth:
+                    <ul>
+                        <li>Join tech communities and participate in hackathons and meetups.</li>
+                        <li>Build a strong professional network on LinkedIn and GitHub.</li>
+                        <li>Seek mentorship from experienced developers and contribute to tech blogs or forums.</li>
+                    </ul>
+                </li>
+                <li>Secure a Frontend Developer Role:
+                    <ul>
+                        <li>Apply for internships and junior developer positions.</li>
+                        <li>Prepare for technical interviews by practicing coding challenges on platforms like LeetCode and HackerRank.</li>
+                        <li>Continuously improve soft skills such as communication, teamwork, and problem-solving.</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Contact Information</h2>
+            <p>Email: <span data-testid="slackEmail">eimuogbo@gmail.com</span></p>
+            <p>Current Time (UTC): <span data-testid="currentTimeUTC"></span></p>
+            <p>Current Day: <span data-testid="currentDay"></span></p>
+        </section>
+        <section>
+            <h2>Useful Links</h2>
+            <ul>
+                <li><a href="https://hng.tech/learn" data-testid="hngLink">HNG Tech Learn</a></li>
+                <li><a href="https://keyword.dog" data-testid="keywordLink">Keyword Dog</a></li>
+                <li><a href="https://scrapeanyweb.site" data-testid="scrapeanywebLink">Scrape Any Web</a></li>
+            </ul>
+        </section>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
