--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1 data-testid="slackDisplayName">Nuel_MD</h1>
-        <img src="Nuel_MD.jpeg" alt="Slack Profile Picture" data-testid="slackProfilePicture">
+        <img src="Nuel_MD.jpeg" alt="Slack Profile Picture" data-testid="slackProfilePicture"/>
     </header>
     <main>
         <section>
